--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+    ">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+    " alt="This is a lion roaring">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+    " alt="This is a lion roaring" title="Cute lion">
   </body>
 </html>
